--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -1,49 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="WireGuardTheme" parent="Theme.Material3.DayNight">
-        <item name="colorPrimary">@color/primary_color</item>
-        <item name="colorOnPrimary">@color/color_control_normal</item>
-        <item name="colorPrimaryDark">@color/primary_color</item>
-        <item name="colorPrimaryVariant">@color/primary_light_color</item>
-        <item name="colorSecondary">@color/secondary_color</item>
-        <item name="colorOnSecondary">@color/secondary_text_color</item>
-        <item name="colorSurface">@color/primary_color</item>
-        <item name="colorOnSurface">@color/color_control_normal</item>
-        <item name="colorBackground">@color/primary_color</item>
-        <item name="colorMultiselectActiveBackground">@color/list_multiselect_background</item>
-        <item name="colorControlNormal">@color/color_control_normal</item>
-        <item name="elevationOverlayColor">@color/primary_light_color</item>
-        <item name="elevationOverlayEnabled">true</item>
-        <item name="android:statusBarColor">@color/status_bar_color</item>
-        <item name="android:windowBackground">@color/primary_color</item>
+    <style name="WireGuardTheme.Toolbar" parent="Widget.Material3.Toolbar">
+        <item name="android:background">?attr/colorSurface</item>
+    </style>
+
+    <style name="AppTheme" parent="WireGuardTheme">
+        <item name="android:statusBarColor">?android:colorBackground</item>
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+        <item name="android:windowLightNavigationBar">@bool/light_navigation_bar</item>
+        <item name="android:windowLightStatusBar">@bool/light_status_bar</item>
         <item name="materialCardViewStyle">@style/AppTheme.MaterialCardView</item>
         <item name="toolbarStyle">@style/WireGuardTheme.Toolbar</item>
+        <item name="bottomSheetDialogTheme">@style/WireGuardTheme.BottomSheetDialog</item>
     </style>
 
-    <style name="WireGuardTheme.Toolbar" parent="Widget.Material3.Toolbar">
-        <item name="android:background">?attr/colorBackground</item>
-    </style>
-
-    <style name="AppTheme" parent="WireGuardTheme" />
-
-    <style name="AppTheme.MaterialCardView" parent="Widget.MaterialComponents.CardView">
+    <style name="AppTheme.MaterialCardView" parent="Widget.Material3.CardView.Elevated">
         <item name="cornerRadius">4dp</item>
-        <item name="cardElevation">4dp</item>
         <item name="contentPadding">8dp</item>
-        <item name="cardBackgroundColor">?attr/elevationOverlayColor</item>
     </style>
 
-    <style name="BottomSheetDialogTheme" parent="ThemeOverlay.MaterialComponents.BottomSheetDialog">
+    <style name="WireGuardTheme.BottomSheetDialog" parent="ThemeOverlay.Material3.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
-        <item name="android:navigationBarColor">?attr/colorBackground</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowTranslucentNavigation">false</item>
-        <item name="android:windowIsTranslucent">false</item>
-        <item name="android:backgroundDimEnabled">true</item>
-        <item name="android:backgroundDimAmount">0.5</item>
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:colorBackground">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="NoBackgroundTheme" parent="AppTheme">
@@ -62,8 +41,4 @@
     <style name="DetailText" parent="TextAppearance.MaterialComponents.Body1" />
 
     <style name="SectionText" parent="TextAppearance.MaterialComponents.Subtitle1" />
-
-    <style name="ThemeOverlay.AppTheme.TextInputEditText.OutlinedBox" parent="ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox">
-        <item name="colorControlActivated">@color/color_control_normal</item>
-    </style>
 </resources>
