--- a/ui/src/main/res/values/tv_colors.xml
+++ b/ui/src/main/res/values/tv_colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="tv_primary_color">#ff212121</color>
+    <color name="tv_secondary_dark_color">#ff0059c1</color>
     <color name="tv_card_background">@color/tv_primary_color</color>
     <color name="tv_card_delete_background">#b00020</color>
 </resources>
