--- a/ui/src/main/res/layout/log_viewer_entry.xml
+++ b/ui/src/main/res/layout/log_viewer_entry.xml
@@ -12,9 +12,9 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/log_date"
-        style="@style/TextAppearance.MaterialComponents.Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceBodySmall"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,9 +23,9 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/log_msg"
-        style="@style/TextAppearance.MaterialComponents.Caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceBodySmall"
         android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintTop_toBottomOf="@id/log_date"
         tools:text="FATAL EXCEPTION: Thread-2" />
