--- a/ui/src/main/res/layout/tunnel_detail_peer.xml
+++ b/ui/src/main/res/layout/tunnel_detail_peer.xml
@@ -23,10 +23,10 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/peer_title"
-                style="@style/SectionText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/peer"
+                android:textAppearance="?attr/textAppearanceTitleMedium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,7 +42,6 @@
 
             <TextView
                 android:id="@+id/public_key_text"
-                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/public_key"
@@ -53,6 +52,7 @@
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:singleLine="true"
                 android:text="@{item.publicKey.toBase64}"
+                android:textAppearance="?attr/textAppearanceBodyLarge"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/public_key_label"
                 tools:text="wOs2eguFEohqIZxlSJ1CAT9584tc6ejj9hfGFsoBVkA=" />
@@ -70,7 +70,6 @@
 
             <TextView
                 android:id="@+id/pre_shared_key_text"
-                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/pre_shared_key"
@@ -81,6 +80,7 @@
                 android:nextFocusForward="@id/allowed_ips_text"
                 android:singleLine="true"
                 android:text="@string/pre_shared_key_enabled"
+                android:textAppearance="?attr/textAppearanceBodyLarge"
                 android:visibility="@{!item.preSharedKey.isPresent() ? android.view.View.GONE : android.view.View.VISIBLE}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/pre_shared_key_label"
@@ -99,7 +99,6 @@
 
             <TextView
                 android:id="@+id/allowed_ips_text"
-                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/allowed_ips"
@@ -108,6 +107,7 @@
                 android:nextFocusForward="@id/endpoint_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{item.allowedIps}"
+                android:textAppearance="?attr/textAppearanceBodyLarge"
                 android:visibility="@{item.allowedIps.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/allowed_ips_label"
@@ -126,7 +126,6 @@
 
             <TextView
                 android:id="@+id/endpoint_text"
-                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/endpoint"
@@ -135,6 +134,7 @@
                 android:nextFocusForward="@id/persistent_keepalive_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{item.endpoint}"
+                android:textAppearance="?attr/textAppearanceBodyLarge"
                 android:visibility="@{!item.endpoint.isPresent() ? android.view.View.GONE : android.view.View.VISIBLE}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/endpoint_label"
@@ -153,7 +153,6 @@
 
             <TextView
                 android:id="@+id/persistent_keepalive_text"
-                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/persistent_keepalive"
@@ -162,6 +161,7 @@
                 android:nextFocusForward="@id/transfer_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{@plurals/persistent_keepalive_seconds_unit(item.persistentKeepalive.orElse(0), item.persistentKeepalive.orElse(0))}"
+                android:textAppearance="?attr/textAppearanceBodyLarge"
                 android:visibility="@{!item.persistentKeepalive.isPresent() ? android.view.View.GONE : android.view.View.VISIBLE}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/persistent_keepalive_label"
@@ -182,13 +182,13 @@
 
             <TextView
                 android:id="@+id/transfer_text"
-                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/transfer_label"
                 android:contentDescription="@string/transfer"
                 android:nextFocusUp="@id/persistent_keepalive_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
+                android:textAppearance="?attr/textAppearanceBodyLarge"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/transfer_label"
