--- a/ui/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_editor_fragment.xml
@@ -53,12 +53,12 @@
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/interface_title"
-                            style="@style/SectionText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:layout_marginTop="32dp"
                             android:text="@string/interface_title"
+                            android:textAppearance="?attr/textAppearanceTitleMedium"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -243,7 +243,7 @@
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/set_excluded_applications"
-                            style="@style/Widget.MaterialComponents.Button.TextButton"
+                            style="@style/Widget.Material3.Button.TextButton"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
@@ -275,7 +275,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/add_peer_button"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    style="@style/Widget.Material3.Button.TextButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
