--- a/ui/src/main/res/values/tv_styles.xml
+++ b/ui/src/main/res/values/tv_styles.xml
@@ -17,23 +17,15 @@
         <item name="android:windowBackground">@color/tv_primary_color</item>
         <item name="alertDialogTheme">@style/TvTheme.Dialog</item>
         <item name="materialAlertDialogTheme">@style/TvTheme.Dialog</item>
-        <item name="textInputStyle">@style/TextInputLayoutBase</item>
         <item name="materialCardViewStyle">@style/TvTheme.MaterialCardView</item>
-    </style>
-
-    <style name="TextInputLayoutBase" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">?attr/colorSecondary</item>
-        <item name="hintTextColor">?attr/colorOnPrimary</item>
     </style>
 
     <style name="TvTheme.Dialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="android:windowBackground">?attr/colorSurface</item>
     </style>
 
-    <style name="TvTheme.MaterialCardView" parent="Widget.MaterialComponents.CardView">
+    <style name="TvTheme.MaterialCardView" parent="Widget.Material3.CardView.Elevated">
         <item name="cornerRadius">4dp</item>
-        <item name="cardElevation">8dp</item>
         <item name="contentPadding">8dp</item>
-        <item name="cardBackgroundColor">?attr/elevationOverlayColor</item>
     </style>
 </resources>
