--- a/ui/src/main/res/values/tv_colors.xml
+++ b/ui/src/main/res/values/tv_colors.xml
@@ -4,4 +4,5 @@
     <color name="tv_secondary_dark_color">#ff0059c1</color>
     <color name="tv_card_background">@color/tv_primary_color</color>
     <color name="tv_card_delete_background">#b00020</color>
+    <color name="tv_list_multiselect_background">#ffeeeeee</color>
 </resources>
