--- a/ui/src/main/res/drawable/list_item_background.xml
+++ b/ui/src/main/res/drawable/list_item_background.xml
@@ -8,6 +8,10 @@
                 app:state_multiselected="true">
                 <color android:color="?attr/colorMultiselectActiveBackground" />
             </item>
+            <item
+                android:state_activated="true">
+                <color android:color="?attr/colorControlHighlight" />
+            </item>
         </selector>
     </item>
     <item android:drawable="?attr/selectableItemBackground" />
