--- a/ui/src/main/res/layout/tunnel_detail_peer.xml
+++ b/ui/src/main/res/layout/tunnel_detail_peer.xml
@@ -23,7 +23,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/peer_title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/peer"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
@@ -32,7 +32,7 @@
 
             <TextView
                 android:id="@+id/public_key_label"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/public_key_text"
@@ -42,7 +42,7 @@
 
             <TextView
                 android:id="@+id/public_key_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/public_key"
                 android:ellipsize="end"
@@ -59,7 +59,7 @@
 
             <TextView
                 android:id="@+id/pre_shared_key_label"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/pre_shared_key_text"
@@ -70,7 +70,7 @@
 
             <TextView
                 android:id="@+id/pre_shared_key_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/pre_shared_key"
                 android:ellipsize="end"
@@ -88,7 +88,7 @@
 
             <TextView
                 android:id="@+id/allowed_ips_label"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/allowed_ips_text"
@@ -99,7 +99,7 @@
 
             <TextView
                 android:id="@+id/allowed_ips_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/allowed_ips"
                 android:nextFocusUp="@id/pre_shared_key_text"
@@ -115,7 +115,7 @@
 
             <TextView
                 android:id="@+id/endpoint_label"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/endpoint_text"
@@ -126,7 +126,7 @@
 
             <TextView
                 android:id="@+id/endpoint_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/endpoint"
                 android:nextFocusUp="@id/allowed_ips_text"
@@ -142,7 +142,7 @@
 
             <TextView
                 android:id="@+id/persistent_keepalive_label"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/persistent_keepalive_text"
@@ -153,7 +153,7 @@
 
             <TextView
                 android:id="@+id/persistent_keepalive_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/persistent_keepalive"
                 android:nextFocusUp="@id/endpoint_text"
@@ -169,7 +169,7 @@
 
             <TextView
                 android:id="@+id/transfer_label"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/endpoint_text"
                 android:layout_marginTop="8dp"
@@ -182,7 +182,7 @@
 
             <TextView
                 android:id="@+id/transfer_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/transfer_label"
                 android:contentDescription="@string/transfer"
