--- a/ui/src/main/res/drawable/list_item_background.xml
+++ b/ui/src/main/res/drawable/list_item_background.xml
@@ -8,8 +8,7 @@
                 app:state_multiselected="true">
                 <color android:color="?attr/colorSurfaceVariant" />
             </item>
-            <item
-                android:state_activated="true">
+            <item android:state_activated="true">
                 <color android:color="?attr/colorControlHighlight" />
             </item>
         </selector>
