--- a/ui/src/main/res/values-night/themes.xml
+++ b/ui/src/main/res/values-night/themes.xml
@@ -28,4 +28,8 @@
         <item name="colorSurfaceInverse">@color/md_theme_dark_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_dark_inversePrimary</item>
     </style>
+
+    <style name="LogoStyle">
+        <item name="android:tint"> @color/md_theme_dark_primary</item>
+    </style>
 </resources>
