--- a/ui/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/ui/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,7 +1,7 @@
 <vector android:height="108dp" android:viewportHeight="200"
     android:viewportWidth="200" android:width="108dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#111279"
+    <path android:fillColor="@color/icon_foreground"
         android:pathData="M143,40.4l-10.5,6.2 -0.3,37.7c-0.2,27.6 -0.5,37.7 -1.4,37.7 -0.6,-0 -7.7,-3.8 -15.8,-8.5 -8.1,-4.7 -15.1,-8.5 -15.6,-8.5 -2,0.1 -21.9,12.7 -22.1,14 -0.2,1 12.5,8.9 37.7,23.3 20.9,12.1 38.9,22.1 40,22.4 2,0.5 2,-0.2 2,-65.1 0,-61.8 -0.1,-65.6 -1.7,-65.5 -1,0.1 -6.5,2.9 -12.3,6.3z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#111279"
+    <path android:fillColor="@color/icon_foreground"
         android:pathData="M82,75.5c-21.2,12.2 -38.6,22.9 -38.8,23.6 -0.2,1.2 18.7,12.7 22.4,13.7 0.7,0.2 13.9,-7 29.3,-15.9l28.1,-16.2 0,-13.9c0,-10.4 -0.3,-13.8 -1.2,-13.7 -0.7,-0 -18.6,10.1 -39.8,22.4z" android:strokeColor="#00000000"/>
 </vector>
